finished the conversion fro discord to twilio

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "files.associations": {
         "random": "cpp",
         "system_error": "cpp",
-        "complex": "cpp"
+        "complex": "cpp",
+        "ios": "cpp"
     },
     "cSpell.words": [
         "Homeof"
